welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:9: error: reassignment to val
	do{j = 6 - j;setPos(i,j);ecritMessage(y);y = y + 1;}while(i == 1 | i == 3 | i == 5 | i==7)
             ^